test/zora/fixtures/bailout_fail_out.txt
TAP version 13
# will not go to the end
ok 1 okay
$TAPE/index.js:$LINE
  function rethrow () { throw err }
                        ^

Error: Oh no!
    at Test._ [as fn] ($TEST/zora/fixtures/bailout_fail.js:$LINE:$COL)
    at Test.run ($TAPE/index.js:$LINE:$COL)
    at TestRunner.run ($TAPE/index.js:$LINE:$COL)
    at Timeout._onTimeout ($TAPE/index.js:$LINE:$COL)
    at listOnTimeout (node:internal/timers:$LINE:$COL)
    at process.processTimers (node:internal/timers:$LINE:$COL)
